// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Options Sourcemap should generated absolute paths in sourcemap: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`Options Sourcemap should generated absolute paths in sourcemap: errors 1`] = `Array []`;

exports[`Options Sourcemap should generated absolute paths in sourcemap: map 1`] = `
Object {
  "mappings": "AAAA;EACE,YAAY;AACd;;AAEA;EACE,UAAU;AACZ;;AAEA;EACE,YAAY;AACd;;AAEA;EACE,WAAW;AACb;;AAEA;EACE,4BAA4B;EAC5B,mBAAmB;AACrB;;AAEA;EACE,4BAA4B;EAC5B,mBAAmB;AACrB;;AAEA;EACE;IACE,YAAY;;IAEZ;MACE,WAAW;IACb;;IAEA;MACE,YAAY;IACd;EACF;;EAEA;IACE,cAAc;EAChB;AACF",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should generated absolute paths in sourcemap: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: map 1`] = `
Object {
  "mappings": "AAAA;EACE,YAAY;AACd;;AAEA;EACE,UAAU;AACZ;;AAEA;EACE,YAAY;AACd;;AAEA;EACE,WAAW;AACb;;AAEA;EACE,4BAA4B;EAC5B,mBAAmB;AACrB;;AAEA;EACE,4BAA4B;EAC5B,mBAAmB;AACrB;;AAEA;EACE;IACE,YAAY;;IAEZ;MACE,WAAW;IACb;;IAEA;MACE,YAAY;IACd;EACF;;EAEA;IACE,cAAc;EAChB;AACF",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work Sourcemap - {Boolean}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: css 1`] = `
"a {
  color: black;
}

a {
  color: red;
}

a {
  color: green;
}

a {
  color: blue;
}

.class {
  -x-border-color: blue blue *;
  -x-color: * #fafafa;
}

.class-foo {
  -z-border-color: blue blue *;
  -z-color: * #fafafa;
}

.phone {
  &_title {
    width: 500px;

    @media (max-width: 500px) {
      width: auto;
    }

    body.is_dark & {
      color: white;
    }
  }

  img {
    display: block;
  }
}
"
`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: errors 1`] = `Array []`;

exports[`Options Sourcemap should work disable Sourcemap - {Boolean}: warnings 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): css 1`] = `
"a {
  color: coral;
}
"
`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): errors 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): map 1`] = `
Object {
  "mappings": "AAAA;EAAI,YAAA;AAEJ",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: coral }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work with prev sourceMap (less-loader): warnings 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): css 1`] = `
"a {
  color: coral;
}"
`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): errors 1`] = `Array []`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): map 1`] = `
Object {
  "mappings": "AAAA;EAAI,YAAA;AAEJ",
  "names": Array [],
  "sources": Array [
    "xxx",
  ],
  "sourcesContent": Array [
    "a { color: coral }
",
  ],
  "version": 3,
}
`;

exports[`Options Sourcemap should work with prev sourceMap (sass-loader): warnings 1`] = `Array []`;
